crates/mcb-server/tests/contract/snapshots/contract__vcs_contract_tests__vcs_happy_path.snap
---
source: crates/mcb-server/tests/contract/vcs_contract_tests.rs
assertion_line: 17
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "list_repos",
      "arguments": {
        "limit": 1
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "result": {
      "resultType": "complete",
      "content": [
        {
          "type": "text",
          "text": "{\n  \"repositories\": [],\n  \"count\": 0\n}"
        }
      ],
      "isError": false
    },
    "id": 1
  }
}
